--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -1,22 +1,26 @@
 <div class="register-wrapper mt-3">
   <h2>Zarejestruj się:</h2>
-  <form>
+  <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
     <div>
       <mat-form-field>
         <mat-label>Adres e-mail</mat-label>
-        <input matInput placeholder="test@gmail.com" />
+        <input matInput placeholder="test@gmail.com" formControlName="email" />
       </mat-form-field>
     </div>
     <div>
       <mat-form-field>
         <mat-label>Nazwa uzytkownika</mat-label>
-        <input matInput />
+        <input matInput formControlName="username" />
       </mat-form-field>
     </div>
     <div>
       <mat-form-field>
         <mat-label>Hasło</mat-label>
-        <input matInput [type]="hide ? 'password' : 'text'" />
+        <input
+          matInput
+          [type]="hide ? 'password' : 'text'"
+          formControlName="password"
+        />
         <button
           mat-icon-button
           matSuffix
