L157 dynamiczne włączanie i wyłączanie kontrolki disable() enable()

--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -33,6 +33,7 @@
       </mat-form-field>
     </div>
     <div class="d-flex justify-content-end">
+      <button type="button" (click)="enableControl()">Włącz</button>
       <button mat-raised-button color="primary" type="submit">
         Zarejestruj się
       </button>
