--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -5,12 +5,18 @@
       <mat-form-field>
         <mat-label>Adres e-mail</mat-label>
         <input matInput placeholder="test@gmail.com" formControlName="email" />
+        <mat-error *ngIf="controls.email.invalid">{{
+          getErrorMessage(controls.email)
+        }}</mat-error>
       </mat-form-field>
     </div>
     <div>
       <mat-form-field>
         <mat-label>Nazwa uzytkownika</mat-label>
         <input matInput formControlName="username" />
+        <mat-error *ngIf="controls.username.invalid">{{
+          getErrorMessage(controls.username)
+        }}</mat-error>
       </mat-form-field>
     </div>
     <div>
@@ -21,6 +27,9 @@
           [type]="hide ? 'password' : 'text'"
           formControlName="password"
         />
+        <mat-error *ngIf="controls.password.invalid">{{
+          getErrorMessage(controls.password)
+        }}</mat-error>
         <button
           mat-icon-button
           matSuffix
