L163 AuthService -rejestracja (POST)+ opcja nonNullable w FormControl

--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -46,6 +46,6 @@
         Zarejestruj się
       </button>
     </div>
-    <!-- <app-alert *ngIf="errorMessage" [text]="errorMessage"></app-alert> -->
+    <app-alert *ngIf="errorMessage" [text]="errorMessage"></app-alert>
   </form>
 </div>
