--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -41,6 +41,19 @@
         </button>
       </mat-form-field>
     </div>
+    <ng-container formArrayName="hobbies">
+      <div *ngFor="let hobby of hobbies.controls; index as i">
+        <input type="text" [formControlName]="i" />
+        <button
+          class="btn btn-sm, btn-danger"
+          type="button"
+          (click)="removeControl(i)"
+        >
+          x
+        </button>
+      </div>
+    </ng-container>
+    <button (click)="addControl()" type="button">Dodaj kontrolkę</button>
     <div class="d-flex justify-content-end">
       <button mat-raised-button color="primary" type="submit">
         Zarejestruj się
