--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -41,7 +41,7 @@
         </button>
       </mat-form-field>
     </div>
-    <ng-container formArrayName="hobbies">
+    <!-- <ng-container formArrayName="hobbies">
       <div *ngFor="let hobby of hobbies.controls; index as i">
         <input type="text" [formControlName]="i" />
         <button
@@ -53,7 +53,7 @@
         </button>
       </div>
     </ng-container>
-    <button (click)="addControl()" type="button">Dodaj kontrolkę</button>
+    <button (click)="addControl()" type="button">Dodaj kontrolkę</button> -->
     <div class="d-flex justify-content-end">
       <button mat-raised-button color="primary" type="submit">
         Zarejestruj się
