--- a/src/app/modules/clients/clients-table/clients-table.component.html
+++ b/src/app/modules/clients/clients-table/clients-table.component.html
@@ -48,6 +48,7 @@
     </tr>
   </table>
   <mat-paginator
+    [length]="totalCount"
     [pageSizeOptions]="[5, 10, 25, 100]"
     aria-label="Select page of users"
   ></mat-paginator>
