--- a/src/app/modules/clients/clients-table/clients-table.component.html
+++ b/src/app/modules/clients/clients-table/clients-table.component.html
@@ -13,19 +13,19 @@
 
     <!-- Name Column -->
     <ng-container matColumnDef="firstname">
-      <th mat-header-cell *matHeaderCellDef>Imie</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Imie</th>
       <td mat-cell *matCellDef="let element">{{ element.firstname }}</td>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="surname">
-      <th mat-header-cell *matHeaderCellDef>Nazwisko</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nazwisko</th>
       <td mat-cell *matCellDef="let element">{{ element.surname }}</td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef>E-mail</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>E-mail</th>
       <td mat-cell *matCellDef="let element">{{ element.email }}</td>
     </ng-container>
 
@@ -49,7 +49,7 @@
   </table>
   <mat-paginator
     [length]="totalCount"
-    [pageSizeOptions]="[5, 10, 25, 100]"
+    [pageSizeOptions]="[1, 5, 10, 25, 100]"
     aria-label="Select page of users"
   ></mat-paginator>
 </section>
