--- a/src/app/modules/clients/clients-table/clients-table.component.html
+++ b/src/app/modules/clients/clients-table/clients-table.component.html
@@ -1,7 +1,12 @@
 <section class="mt-4">
   <mat-form-field>
     <mat-label>Filtrowanie:</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="szukaj" #input />
+    <input
+      matInput
+      [formControl]="filterValue"
+      placeholder="wpisz frazę"
+      #input
+    />
   </mat-form-field>
 
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
