--- a/src/app/modules/clients/components/clients-table/clients-table.component.html
+++ b/src/app/modules/clients/components/clients-table/clients-table.component.html
@@ -38,7 +38,13 @@
     <ng-container matColumnDef="buttons">
       <th mat-header-cell *matHeaderCellDef>Szczegóły</th>
       <td mat-cell *matCellDef="let element">
-        <button color="primary" mat-raised-button>Szczegóły</button>
+        <button
+          color="primary"
+          mat-raised-button
+          [routerLink]="'/klienci/' + element.id"
+        >
+          Szczegóły
+        </button>
       </td>
     </ng-container>
 
