--- a/src/app/modules/core/components/header/header.component.html
+++ b/src/app/modules/core/components/header/header.component.html
@@ -5,6 +5,7 @@
     <button mat-button routerLink="/">Strona główna</button>
     <button mat-button routerLink="/logowanie" *ngIf="!user">Logowanie</button>
     <button mat-button routerLink="/klienci">Klienci</button>
+    <button mat-button routerLink="/klienci/dodaj">Dodaj klienta</button>
     <button mat-button (click)="logout()" *ngIf="user">Wyloguj się</button>
   </mat-toolbar>
 </nav>
