--- a/src/app/modules/clients/components/client-form/client-form.component.html
+++ b/src/app/modules/clients/components/client-form/client-form.component.html
@@ -65,6 +65,6 @@
         Dodaj nowego klienta
       </button>
     </div>
-    <!-- <app-alert *ngIf="errorMessage" [text]="errorMessage"></app-alert> -->
+    <app-alert *ngIf="errorMessage" [text]="errorMessage"></app-alert>
   </form>
 </div>
