L179 Usuwanie klienta z mat-dialog (dynamicznie tworzony komponent)

--- a/src/app/modules/clients/components/client/client.component.html
+++ b/src/app/modules/clients/components/client/client.component.html
@@ -1,4 +1,8 @@
 <div *ngIf="client">
+  <div>
+    <p>Usun klienta</p>
+    <button mat-raised-button color="warn" (click)="openDialog()">Usuń</button>
+  </div>
   <p>Dane Klienta:</p>
   <p>{{ client.firstname }} {{ client.surname }}</p>
   <p>Adres e-mail: {{ client.email }}</p>
