--- a/src/app/modules/clients/components/clients-table/clients-table.component.html
+++ b/src/app/modules/clients/components/clients-table/clients-table.component.html
@@ -60,7 +60,7 @@
   </table>
   <mat-paginator
     [length]="totalCount"
-    [pageSizeOptions]="[1, 5, 10, 25, 100]"
+    [pageSizeOptions]="[5, 10, 25, 100]"
     aria-label="Select page of users"
   ></mat-paginator>
 </section>
