--- a/src/app/modules/clients/components/clients-table/clients-table.component.html
+++ b/src/app/modules/clients/components/clients-table/clients-table.component.html
@@ -19,7 +19,9 @@
     <!-- Name Column -->
     <ng-container matColumnDef="firstname">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Imie</th>
-      <td mat-cell *matCellDef="let element">{{ element.firstname }}</td>
+      <td mat-cell *matCellDef="let element">
+        <span appHighlight="red">{{ element.firstname }}</span>
+      </td>
     </ng-container>
 
     <!-- Weight Column -->
